@@ -1,0 +1,127 @@
+/*
+ * jReject (jQuery Browser Rejection Plugin)
+ * Version 1.0-RC2
+ * URL: http://jreject.turnwheel.com/
+ * Description: jReject is a easy method of rejecting specific browsers on your site
+ * Author: Steven Bower (TurnWheel Designs) http://turnwheel.com/
+ * Copyright: Copyright (c) 2009-2011 Steven Bower under dual MIT/GPL license.
+ */
+
+#jr_overlay {
+	top: 0;
+	left: 0;
+	padding: 0;
+	margin: 0;
+	z-index: 200;
+	position: absolute;
+}
+
+#jr_wrap {
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	z-index: 300;
+	padding: 0;
+	margin: 0;
+}
+
+#jr_inner {
+	font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+	font-size: 12;
+	background: #FFF;
+	border: 1px solid #CCC,
+	color: #4F4F4F;
+	margin: 0 auto;
+	height: auto;
+	padding: 20;
+	position: relative;
+}
+
+#jr_header {
+	display: block;
+	color: #333;
+	padding: 5;
+	margin: 0;
+	font-family: Helvetica,Arial,sans-serif;
+	font-weight: bold;
+	text-align: left;
+	font-size: 1.3em;
+	margin-bottom: 0.5em;
+}
+
+#jr_inner p {
+	text-align: left;
+	padding: 5;
+	margin: 0;
+}
+
+#jr_inner ul {
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+#jr_inner ul li {
+	cursor: pointer;
+	float: left;
+	width: 120,
+	height: 122,
+	margin: 0 10px 10px 10px;
+	padding: 0,
+	text-align: center;
+}
+
+#jr_inner .jr_icon {
+	width: 100;
+	height: 100;
+	margin: 1px auto;
+	padding: 0;
+	background: transparent no-repeat scroll left top;
+	cursor: pointer;
+}
+
+#jr_inner div {
+	color: #808080;
+	font-size: 0.8em;
+	height: 18;
+	line-height: 17px;
+	margin: 1px auto;
+	padding: 0;
+	width: 118;
+	text-align: center;
+}
+
+#jr_inner div a {
+	color: #333;
+	text-decoration: none;
+	padding: 0;
+	margin: 0;
+}
+
+#jr_inner div a:hover {
+	text-decoration: underline;
+}
+
+#jr_close {
+	margin: 0 0 0 50px;
+	clear: both;
+	text-align: left;
+	padding: 0;
+	margin: 0;
+}
+
+#jr_close a {
+	color: #000;
+	display: block;
+	width: auto;
+	margin: 0,
+	padding: 0,
+	text-decoration: underline;
+}
+
+#jr_close p {
+	padding: 10px 0 0 0;
+	margin: 0;
+}
