@@ -5,6 +5,8 @@
 	<title>jReject - jQuery Plugin for Simple Browser Rejection</title>
 	<meta name="description" content="jReject: jQuery Browser Rejection Plugin" />
 
+	<link href="css/jquery.jreject.css" rel="stylesheet" />
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./jquery.reject.js"></script>
 	<script type="text/javascript">
